# wunder-user-mcp

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: README.md
docs/domain/: GLOSSARY.md  OVERVIEW.md  README.md
docs/tech/: ARCHITECTURE.md  AUTHENTICATION.md  CONVENTIONS.md  MCP-TOOLS.md  README.md  TECH-STACK.md  TESTING.md
src/wunder_user_mcp/: __init__.py  __main__.py  auth.py  client.py  config.py  geo.py  server.py
tests/: test_auth.py  test_geo.py
