[project]
name = "wunder-user-mcp"
version = "0.1.0"
description = "MCP server for the Wunder Mobility v2 end-user (User) API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Stefan Lettmayer" }]
keywords = ["mcp", "wunder", "mobility", "rentals", "vehicles"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
wunder-user-mcp = "wunder_user_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wunder_user_mcp"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
